Refactor : `User` -> `Member` 도메인 명칭 변경
- 도메인 명칭 변경